[package]
name = "open-stylus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "contracts/access", "contracts/finance",
    "contracts/utils",
]

[lib]
name = "openstylus"
path = "contracts/lib.rs"



[dependencies]
